[gd_scene load_steps=8 format=2]

[ext_resource path="res://ImportantStuff.gd" type="Script" id=1]
[ext_resource path="res://cool_theme.tres" type="Theme" id=2]
[ext_resource path="res://Big_UI.tres" type="DynamicFont" id=3]
[ext_resource path="res://Art/UI/Money.PNG" type="Texture" id=4]
[ext_resource path="res://Art/UI/Danger.PNG" type="Texture" id=5]
[ext_resource path="res://Art/UI/Calender.PNG" type="Texture" id=6]

[sub_resource type="Theme" id=1]

[node name="MainUI" type="HBoxContainer"]
anchor_left = 0.05
anchor_top = 0.95
anchor_right = 0.95
anchor_bottom = 0.95
margin_top = -103.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Money" type="HBoxContainer" parent="."]
margin_right = 404.0
margin_bottom = 103.0
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="Money"]
margin_right = 83.0
margin_bottom = 103.0
texture = ExtResource( 4 )
stretch_mode = 4

[node name="MoneyAmount" type="Label" parent="Money"]
margin_left = 87.0
margin_top = 10.0
margin_right = 116.0
margin_bottom = 92.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.964706, 0.94902, 0.858824, 1 )
custom_fonts/font = ExtResource( 3 )
text = "0"
align = 3
valign = 3

[node name="Suffix" type="Label" parent="Money"]
margin_left = 120.0
margin_top = 10.0
margin_right = 149.0
margin_bottom = 92.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.964706, 0.94902, 0.858824, 1 )
custom_fonts/font = ExtResource( 3 )
text = "0"
align = 3
valign = 3

[node name="Danger" type="HBoxContainer" parent="."]
margin_left = 408.0
margin_right = 513.0
margin_bottom = 103.0

[node name="TextureRect" type="TextureRect" parent="Danger"]
margin_right = 72.0
margin_bottom = 103.0
texture = ExtResource( 5 )

[node name="DangerAmount" type="Label" parent="Danger"]
margin_left = 76.0
margin_top = 10.0
margin_right = 105.0
margin_bottom = 92.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 0.964706, 0.94902, 0.858824, 1 )
custom_fonts/font = ExtResource( 3 )
text = "0"

[node name="Time" type="HBoxContainer" parent="."]
margin_left = 517.0
margin_right = 921.0
margin_bottom = 103.0
size_flags_horizontal = 3
alignment = 2

[node name="TextureRect" type="TextureRect" parent="Time"]
margin_left = 288.0
margin_right = 385.0
margin_bottom = 103.0
texture = ExtResource( 6 )
stretch_mode = 4

[node name="DayAmount" type="Label" parent="Time"]
margin_left = 389.0
margin_top = 10.0
margin_right = 404.0
margin_bottom = 92.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}
